style.css
/* ... */
div.cert:hover{
    transform: scale(1.02);
    box-shadow: 4px 4px 0px var(--secondary-color);
    opacity: 1;
}
div.cert img{
    position: absolute;
    height: inherit;
    width: inherit;
}
div.cert:nth-child(2) img,div.cert:nth-child(1) img{
    width: 350px;
}

/*Contact-container styling*/

.contact-container h1{
    color: var(--secondary-color);
    text-align: center;
}

.contact-container h3{
    text-align: center;
}
div.contact{
    margin: 30px 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

div.message-container{
    display: flex;
    flex-direction: column;
    width: 40%;
}
.contact-input{
    background: transparent;
    color: var(--white);
    margin-top: 20px;
    height: 30px;
    padding: 5px;
    border: none;
    outline: none;
    border-bottom: 2px solid var(--white);
    font-size: var(--font-size);

}
input:focus,input:active{
    color: var(--white);
    border-bottom: 2px solid var(--secondary-color);
    caret-color: var(--secondary-color);
}
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active{
    box-shadow: 0 0 0 30px var(--background-color) inset !important;
}
input:-webkit-autofill{
    -webkit-text-fill-color: var(--white) !important;
}
.submit-button{
    margin-left: 40%;
}
.address-container{
    width: 40%;
    margin-left: 50px;
}
.address-container div{
    margin: 25px 30px;
}
footer{
    min-height: 50px;
    padding: 0 10%;
    line-height: 50px;
}
footer>p>span{
    float: right;
}

@media only screen and (max-width: 1920px){
    
    div.contents{
        line-height: 60px;
    }
    
}

@media only screen and (max-width: 1200px){

    .about-image-container{
        width: 500px;
    }
    .about-image{
        width: 500px;
    }
    .study-image-container{
        width: 500px;
    }
    .study-image{
        height: 500px;
        width: 500px;
    }
    .ed-container{
        padding-left: 50px;
    }
    .skills ul,.skill-image-container,.skillset{
        width: 500px;
    }
    .skill-image{
        width: 400px;
        height: 400px;
        margin: 0 0 0 50px;
    }
}
@media only screen and (max-width: 1025px){
    div.skills ul{
        width: 450px;
    }
    .skillset{
        width: 450px;
    }
    div.skillbar{
        width: 200px;
    }
    .skill-image-container{
        width: 368px;
    }
    .skill-image{
        margin: 0;
    }
    div.message-container{
        width: 50%;
    }
    div.address-container{
        width: 50%;
    }
    
}
@media only screen and (max-width: 992px){

    .about-image-container{
        width: 400px;
        height: 400px;
    }
    .about-image{
        width: 400px;
        height: 350px;
    }
    .study-image{
        height: 400px;
        width: 400px;
        margin-top: 100px;
    }
    .skills ul{
        font-size: inherit;
    }
    .skillset{
        width: 450px;
    }
    .skill-image-container{
        width: 350px;

    }
    .skill-image{
        width: 350px;
        margin: 0;
    }
}
@media only screen and (max-width: 768px){
    .home-container{
        position: relative;
    }
    nav{
        margin: 0;
        width: 612px;
        justify-content: center;
    }
    header{
        margin: 0;
    }
    header a{
        width: 300px;
        font-size: 1.5rem;
    }
    
    .hamburger{
        position: absolute;
        display: block;
        right: -60px;
    }
    #open{
        height: 30px;
        width: 30px;
        font-size: 25px;
    }
    #close{
        display: none;
        position: absolute;
        font-size: 25px;
        top: -15px;
        right: 10px;
        color: var(--secondary-color);
    }
    .ham-slide{
        position: fixed;
        border: 2px solid var(--secondary-color);
        background-color: var(--background-color);
        transition: var(--transition);
        height: 900px;
        width: 0;
        right: 0;
        top: 68px;
        z-index: 10;
        
    }
    .ham-slide ul{
        display: flex;
        flex-direction: column;
        align-items: center;
        width: inherit;
        height: auto;
        line-height: 70px;
        
    }
    .ham-slide ul li{
        width: 70%;
        border-bottom: 2px solid var(--secondary-color);
    }
    
    nav ul{
        display: none;
    }
    .home-container{
        height: 750px;
    }
    .aboutme{
        display: flex;
        flex-wrap: wrap;
    }
    .information{
        width: inherit;
    }
    .about-image-container{
        width: inherit;
        margin: 0 auto;
    }
    
    div.education{
        display: flex;
        flex-direction: column;
    }
    div.ed-container{
        padding: 0;
        margin: 0 auto;
    }
    
    .study-image-container{
        margin: 0 auto;
        height: 350px;
        width: 350px;
    }
    .study-image{
        height: 350px;
        width: 350px;
        margin: 0;
    }
    .skills{
        display: flex;
        flex-direction: column;
    }
    .skills ul{
        margin: 0 auto;
    }
    .skillset{
        width: 500px;
    }
    .skill-image-container{
        margin: 0 auto;
    }
    .project-list{
        width: 500px;
        height: 300px;
    }
    div.cert{
        width: 500px;
        height: 300px;
        
    }
    div.cert:nth-child(2) img,div.cert:nth-child(1) img{
        width: 500px;
    }
    div.contact{
        display: flex;
        flex-direction: column;
        padding: 50px;
    }
    div.message-container,div.address-container{
        width: inherit;
        height: 300px;
    }
    div.address-container{
        margin: 0;
    }
    .foot{
        padding: 0 20px;
    }
    
}
/* ... */

